# openGemini-mcp-server

./: README.md  pyproject.toml
src/openGemini_mcp_server/: __init__.py  server.py
