[project]
name = "openGemini-mcp-server"
packages = [{ include = "src/openGemini_mcp_server" }]
version = "0.1.0"
description = "An MCP server for cncf openGemini."
readme = "README.md"
license = "Apache-2.0"
license-file="LICENSE"
requires-python = ">=3.0"
dependencies = [
    "mcp>=1.0.0",
    "influxdb>=5.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".git",
    ".gitignore"
]

[project.scripts]
openGemini-mcp-server = "openGemini_mcp_server:main"

[project.urls]
Home = "https://github.com/openGemini/openGemini-mcp-server"
